--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
    <main>
        <!--Герой-->
        <section class="hero">
-           <div class="container">
+           <div class="container caption ">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                 <button type="button" class="button">Заказать услугу</button>
            </div>
@@ -117,11 +117,10 @@
    <footer class="footer"> 
        <div class="container">
             <a href="#" target="_blank" class="logo link">Web<span class="logo-footer">Studio</span></a>
-            <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-            <div >
+            <address class="address">г. Киев, пр-т Леси Украинки, 26
                 <a href="mailto:info@example.com" class="contact-footer link">info@example.com</a> 
                 <a href="tel.:+380991111111" class="contact-footer link">+38 099 111 11 11</a>
-            </div>
+            </address>
        </div>
    </footer>
 </body>
