--- a/portfolio.html
+++ b/portfolio.html
@@ -132,16 +132,15 @@
         </div>
         </section>
     </main>
-       <!--footer-->
-    <footer class="footer"> 
-        <div class="container">
-            <a href="#" target="_blank" class="logo link">Web<span class="logo-footer">Studio</span></a>
-             <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-            <div >
-                 <a href="mailto:info@example.com" class="contact-footer link">info@example.com</a> 
-                 <a href="tel.:+380991111111" class="contact-footer link">+38 099 111 11 11</a>
-            </div>
-        </div>
-   </footer>
+      <!--footer-->
+   <footer class="footer"> 
+    <div class="container">
+         <a href="#" target="_blank" class="logo link">Web<span class="logo-footer">Studio</span></a>
+         <address class="address">г. Киев, пр-т Леси Украинки, 26
+             <a href="mailto:info@example.com" class="contact-footer link">info@example.com</a> 
+             <a href="tel.:+380991111111" class="contact-footer link">+38 099 111 11 11</a>
+         </address>
+    </div>
+</footer>
 </body>
 </html>
